-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.5.0, 5.6.0 Alpha
-
None
The multitouch input is broken on touchscreens which are not correctly parsed for capabilities.
Without the position capability the "touchinteraction" example like any other "touch" based application gets stuck.
The Qt qpa/xinput debug output
qt.qpa.input.devices: input device ELAN Touchscreen qt.qpa.input.devices: has 7 buttons qt.qpa.input.devices: has valuator "Abs X" recognized? true qt.qpa.input.devices: has valuator "Abs Y" recognized? true qt.qpa.input.devices: has valuator "Rel Horiz Scroll" recognized? true qt.qpa.input.devices: has valuator "Rel Vert Scroll" recognized? true qt.qpa.input.devices: it's a scrolling device qt.qpa.input.devices: has touch class with mode 1 qt.qpa.input.devices: it's a touchscreen with type 0 capabilities 0x0 max touch points 15
The output of xinput looks like
$ xinput --list --long 9 ELAN Touchscreen id=9 [slave pointer (2)] Reporting 6 classes: Class originated from: 9. Type: XIButtonClass Buttons supported: 7 Button labels: "Button Left" "Button Middle" "Button Right" "Button Wheel Up" "Button Wheel Down" "Button Horiz Wheel Left" "Button Horiz Wheel Right" Button state: Class originated from: 9. Type: XIValuatorClass Detail for Valuator 0: Label: Abs X Range: 0.000000 - 65535.000000 Resolution: 0 units/m Mode: absolute Current value: 990.000000 Class originated from: 9. Type: XIValuatorClass Detail for Valuator 1: Label: Abs Y Range: 0.000000 - 65535.000000 Resolution: 0 units/m Mode: absolute Current value: 409.000000 Class originated from: 9. Type: XIValuatorClass Detail for Valuator 2: Label: Rel Horiz Scroll Range: -1.000000 - -1.000000 Resolution: 0 units/m Mode: relative Class originated from: 9. Type: XIValuatorClass Detail for Valuator 3: Label: Rel Vert Scroll Range: -1.000000 - -1.000000 Resolution: 0 units/m Mode: relative Class originated from: 9. Type: XITouchClass Touch mode: direct Max number of touches: 15
| For Gerrit Dashboard: QTBUG-48279 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 125718,2 | xcb: fix touchscreen input with certain capabilities only | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |