src/plugins/platforms/xcb/qxcbconnection_xi2.cpp
@@ -419,8 +419,10 @@ XInput2TouchDeviceData *QXcbConnection::touchDeviceForId(int id)
                     hasRelativeCoords = true;
                     dev->size.setHeight((vci->max - vci->min) * 1000.0 / vci->resolution);
                 } else if (vci->label == atom(QXcbAtom::AbsX)) {
+                    caps |= QTouchDevice::Position;
                     dev->size.setHeight((vci->max - vci->min) * 1000.0 / vci->resolution);
                 } else if (vci->label == atom(QXcbAtom::AbsY)) {
+                    caps |= QTouchDevice::Position;
                     dev->size.setWidth((vci->max - vci->min) * 1000.0 / vci->resolution);
                 }
                 break;
